Project

General

Profile

Actions

Bug #19505

closed

multisite: rest api fails to decode large period on 'period commit'

Added by Casey Bodley about 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

a period containing 3 zonegroups (and 3 zones each) grew too large to fit in 4096 bytes, so the master zone failed to decode the period on 'period commit'


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19613: jewel: multisite: rest api fails to decode large period on 'period commit'ResolvedNathan CutlerActions
Copied to rgw - Backport #19614: kraken: multisite: rest api fails to decode large period on 'period commit'ResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley about 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Casey Bodley about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19613: jewel: multisite: rest api fails to decode large period on 'period commit' added
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19614: kraken: multisite: rest api fails to decode large period on 'period commit' added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF